# Image-Processing

./: BrightnessContrast.cpp  BrightnessContrast.h  CMakeLists.txt  Drawing.cpp  Drawing.h  GammaCorection.cpp  GammaCorection.h  GaussianBlurKernel.cpp  GaussianBlurKernel.h  HorizontalSobelKernel.cpp  HorizontalSobelKernel.h  IdentityKernel.cpp  IdentityKernel.h  Image.cpp  Image.h  ImageConvolution.cpp  ImageConvolution.h  ImageProcessing.h  Kernel.cpp  Kernel.h  MeanBlurKernel.cpp  MeanBlurKernel.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  Tests.cpp  Tests.h  VerticalSobelKernel.cpp  VerticalSobelKernel.h  main.cpp
